src/objects/FieloAlpha__Level__c.object
<CustomObject>
    <customHelpPage>FieloAlpha__LevelHelpBackEnd</customHelpPage>
    <description>Fidelity Level</description>
    <fields>
        <fullName>FieloAlpha__AttachmentId__c</fullName>
        <label>Image source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Description__c</fullName>
        <description>Detail of each level, for example, they could be called: Silver, Gold, Platinum</description>
        <inlineHelpText>Enter a description of this level.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Image__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;+FieloAlpha__AttachmentId__c, &quot;photo&quot;,50, 50)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Allows to use the level and calculates it on the levels batch process</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Order__c</fullName>
        <description>The hierarchy order of levels.</description>
        <inlineHelpText>Set the hierarchical order for the levels.</inlineHelpText>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program to which this level belongs.</description>
        <inlineHelpText>Select the program to which this level belongs.</inlineHelpText>
        <label>Program</label>
        <referenceTo>FieloAlpha__Program__c</referenceTo>
        <relationshipLabel>Levels</relationshipLabel>
        <relationshipName>Levels</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Level</label>
    <listViews>
        <fullName>FieloAlpha__All_Levels</fullName>
        <columns>NAME</columns>
        <columns>FieloAlpha__Program__c</columns>
        <columns>FieloAlpha__Description__c</columns>
        <columns>FieloAlpha__IsActive__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Levels</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Level Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Levels</pluralLabel>
    <recordTypes>
        <fullName>FieloAlpha__Active</fullName>
        <active>true</active>
        <label>Active</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloAlpha__Inactive</fullName>
        <active>true</active>
        <label>Inactive</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloAlpha__ModifyProgram</fullName>
        <active>true</active>
        <description>Is not possible to modify the associated Program</description>
        <errorConditionFormula>ISCHANGED(FieloAlpha__Program__c) &amp;&amp; NOT(ISBLANK(PRIORVALUE(FieloAlpha__Program__c)))</errorConditionFormula>
        <errorDisplayField>FieloAlpha__Program__c</errorDisplayField>
        <errorMessage>Is not possible to modify the associated Program</errorMessage>
    </validationRules>
</CustomObject>